Adding React, Bootstrap & API Tools
- Added DbContext class
- Added Css
- Added React Components
- Added Controller and Mdels classes

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Password=P@ssw0rd; User ID=wgcapp; Initial Catalog=WGC_VIANET; Data Source=WGCSERVERSQL01; connection timeout=600;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
